--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <script>
     // ---------- Configuration ----------
-    const DATA_ROOT = "/workspaces/PokemonSpawnSearch/data"; // change if your JSONs are elsewhere
+    const DATA_ROOT = "PokemonSpawnSearch/data"; // change if your JSONs are elsewhere
 
     // Optional demo data (used if fetch fails in preview or local file mode)
     const DEMO = {
